apps/prod/kulinaryos/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: kulinaryos
spec:
  redirectScheme:
    scheme: https
    permanent: true
