apps/prod/kulinaryos/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kulinaryos
  labels:
    app.kubernetes.io/part-of: kulinaryos
    environment: production
