apps/prod/kulinaryos/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kulinaryos-web
  namespace: kulinaryos
  labels:
    app.kubernetes.io/name: kulinaryos-web
    app.kubernetes.io/part-of: kulinaryos
spec:
  selector:
    app.kubernetes.io/name: kulinaryos-web
  ports:
    - name: http
      port: 80
      targetPort: http
