apps/prod/kulinaryos/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kulinaryos-http
  namespace: kulinaryos
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kulinaryos.rbx.ia.br`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: kulinaryos
      services:
        - name: kulinaryos-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kulinaryos-https
  namespace: kulinaryos
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kulinaryos.rbx.ia.br`)
      kind: Rule
      services:
        - name: kulinaryos-web
          port: 80
  tls:
    secretName: kulinaryos-tls
